# Unity-RL-Controller

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  unity-integration.yml
changelog/: index.html
cli-reference/: index.html
docs/: cli-reference.md  examples.md  index.md  protocol.md  quickstart.md
docs/tutorials/: curriculum.md  write-a-bridge.md  write-an-algorithm.md
examples/: index.html
examples/csharp_bridge/: Program.cs  README.md  urc.yaml
examples/toy_reach_target/: README.md  env_server.py  urc.yaml
examples/unity_basic_ppo/: README.md  urc.yaml
examples/walljump_ppo/: README.md  urc.yaml
protocol/: index.html
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
src/urc/algorithms/: __init__.py  curriculum.py  gym_bridge.py  recording.py  sb3_base.py  sb3_ppo.py  sb3_sac.py
src/urc/bridges/: __init__.py  _recording_channel.py  external_bridge.py  mlagents_bridge.py  socket_bridge.py
src/urc/cli/: _shared.py  algo.py  compare.py  config.py  doctor.py  env.py  eval.py  init.py  main.py  record.py  train.py  visualize.py
src/urc/config/: __init__.py  defaults.yaml  loader.py  schema.py
src/urc/core/: contracts.py  environments.py  evaluation.py  jsonutil.py  plugins.py  registry.py  rpc.py  runs.py
tests/: conftest.py  test_cli.py  test_cli_algo.py  test_cli_compare.py  test_cli_config.py  test_cli_doctor.py  test_cli_env.py  test_cli_env_environments.py  test_cli_eval.py  test_cli_init.py  test_cli_record.py  test_cli_train.py  test_cli_train_curriculum.py  test_cli_train_plugins.py  test_cli_visualize.py  test_config_loader.py  test_config_schema.py  test_contracts.py  test_csharp_reference_bridge.py  test_curriculum.py  test_environments.py  test_evaluation.py  test_external_bridge.py  test_gym_bridge.py  test_mlagents_bridge.py  test_plugins.py  test_recording_callback.py  test_registry.py  test_rpc.py  test_runs.py  test_sb3_logging.py  test_sb3_ppo.py  test_sb3_sac.py  test_socket_bridge.py  test_unity_headless_integration.py
tests/fixtures/: echo_bridge.py
tutorials/curriculum/: index.html
tutorials/write-a-bridge/: index.html
tutorials/write-an-algorithm/: index.html
unity/UrcVideoRecorder/: UrcVideoRecorder.cs
