[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urc"
version = "0.1.0"
description = "Unity RL Controller — controla entrenamientos de Reinforcement Learning en Unity desde la terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
urc = "urc.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]
mlagents = [
    # mlagents-envs 0.28.0 (la última publicada en PyPI) trae bindings de
    # protobuf generados con una versión antigua: con protobuf>=3.21 falla al
    # importar ("Descriptors cannot be created directly"). Se fija <3.21 hasta
    # que el proyecto publique bindings regenerados.
    "mlagents-envs==0.28.0",
    "protobuf<3.21",
]
sb3 = [
    "stable-baselines3>=2.0",
    "gymnasium>=0.29",
    "tensorboard>=2.14",
    "tqdm>=4.65",
    "rich>=13.0",
]
wandb = [
    "wandb>=0.16",
]
all = [
    "urc[mlagents,sb3,wandb]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/urc"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer requiere `= typer.Option(...)` / `= typer.Argument(...)` como
# valor por defecto de los parámetros de los comandos; es el patrón oficial,
# no un bug.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # mlagents-envs 0.28.0 usa una API de protobuf ya deprecada (ver pin de
    # protobuf<3.21 más arriba); no es un problema de nuestro código.
    "ignore::DeprecationWarning:mlagents_envs.*",
    # tqdm avisa de que su integración con rich (usada por progress_bar=True
    # de SB3) es experimental; es ruido de esas dos librerías, no nuestro.
    "ignore::tqdm.std.TqdmExperimentalWarning",
    # html5lib (vendorizado dentro de TensorBoard, vía bleach) avisa de que su
    # propio sanitizer está deprecado; no es algo que dependa de nuestro código.
    "ignore:html5lib's sanitizer is deprecated:DeprecationWarning",
]
